tests/lustre/typechecking/shouldPass/inc.lus
-- A node to include
node abs(x: real) returns (y: real);
let y = if x > 0.0 then x else -x; tel