tests/lustre/typechecking/shouldFail/inlined_contract_01.lus

node top(x: int) returns (y: real);
(*@contract
  guarantee x=y;
*)
let
  y = (real x);
tel
